update test command to clear cache

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rm -rf build",
     "build": "npm run clean && tsc && tsc --m commonjs --outDir build/cjs/ --declaration false",
     "build:watch": "npm run clean && tsc -w && tsc --outDir build/cjs --m commonjs --declaraton false",
-    "test": "jest --verbose",
+    "test": "jest --clearCache && jest --verbose",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect-brk=0.0.0.0 node_modules/jest/bin/jest.js --runInBand --config jest.config.js",
     "publish": "npm run build && npm publish --access=public"
